--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-qr-code": "^2.0.11",
-    "react-qr-reader": "3.0.0-beta-1"
+    "react-qr-code": "^2.0.11"
   }
 }
